recursion.lessons.recursion.square.FourSquare.scala.error
FourSquare:5: error: not found: value o
	for (i<-o until 4) {
                ^