recursion.lessons.recursion.square.FourSquare.scala.code
override def run() {
	for (i<-0 until 4) carre();
}
def carre() {
	for (i<-o until 4) {
		avance(100);
		gauche(90);
	}
	gauche(90);
}
